# pyproject.toml
#
# This file serves as the central configuration for the Python project,
# using the setuptools build backend.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-db-clients" 
# The version is managed by semantic-release and will be updated automatically on release.
version = "0.1.0"
authors = [
  { name = "Trading Systems Team", email = "ven.ajie@protonmail.com" },
]
description = "Shared database clients for the trading engine."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
# Define production dependencies here.
dependencies = [
    "aiohttp==3.12.7",
    "asyncpg==0.30.0",
    "loguru==0.7.2",
    "orjson==3.10.18",
    "redis==5.0.4",
    "tomli==2.0.1",
    "shared-config @ git+https://github.com/venoajie/shared-config.git@v0.1.0",

]

[project.urls]
"Homepage" = "https://github.com/venoajie/shared-db-clients"
"Repository" = "https://github.com/venoajie/shared-db-clients"

# Specifies the directory where the package source code resides.
[tool.setuptools.packages.find]
where = ["src"]

# Defines optional dependencies for development, testing, and releasing.
# These are installed by `pip install -e .[dev]` in the CI pipeline.
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "python-semantic-release>=9.0",
    "build>=1.0",
]

# --- Tool Configurations ---

# Configuration for python-semantic-release.
[tool.semantic_release]
# The location of the version string to be updated.
version_toml = "pyproject.toml:project.version"
# Specifies the command to build the distributable package files.
build_command = "python -m build"
# Enforce conventional commit message standards.
commit_parser = "angular"
# Automatically generate release notes in CHANGELOG.md.
changelog_file = "CHANGELOG.md"
# Defines which repository provider to use for creating releases (e.g., GitHub).
repository = "github"
# Defines the branch from which releases are made.
branch = "main"

# Configuration for the Ruff linter and formatter.
[tool.ruff]
line-length = 88
# Assumes the source code is in a `src` directory.
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# Configuration for Pytest.
[tool.pytest.ini_options]
# Add command line options here.
# --cov specifies the module to measure coverage on.
# --cov-report generates a terminal report.
addopts = "--cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
