# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-db-clients"
version = "0.1.1"
authors = [
  { name = "Trading Systems Team", email = "ven.ajie@protonmail.com" },
]
description = "Shared database clients for the trading engine."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp==3.12.7",
    "asyncpg==0.30.0",
    "loguru==0.7.2",
    "orjson==3.10.18",
    "redis==5.0.4",
    "tomli==2.0.1",
    "shared-config @ git+https://github.com/venoajie/shared-config.git@v0.1.1",
]

[project.urls]
"Homepage" = "https://github.com/venoajie/shared-db-clients"
"Repository" = "https://github.com/venoajie/shared-db-clients"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23", # ADDED
    "pytest-mock>=3.12",    # ADDED
    "ruff>=0.4",
    "python-semantic-release>=9.0",
    "build>=1.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m build"
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
repository = "github"
branch = "main"

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B904"] # B904 ignored to keep existing exception handling simple

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
# Configure asyncio mode
asyncio_mode = "auto"
